# rmodmaster

./: .gitignore  Cargo.toml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs  serialport.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
